# wava

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build-nix.sh  default.nix  flake.nix  result  wava
assets/linux/: wava.desktop
assets/windows/: readme.txt  xava.nsi.template  xava.rc.template
example_files/: config
src/: config.c  config.h  shared.h  wava.c
src/cmake/: build-fix.cmake  copy_gl_shaders.cmake  install_and_configure.cmake  modules.cmake  os-prerequisites.cmake  utilities.cmake
src/filters/default/: build.cmake  main.c
src/input/alsa/: build.cmake  main.c
src/input/cubeb/: build.cmake  main.c
src/input/fifo/: build.cmake  main.c
src/input/pipewire/: build.cmake  main.c
src/input/portaudio/: build.cmake  main.c
src/input/pulseaudio/: build.cmake  main.c
src/input/shmem/: build.cmake  main.c
src/input/sndio/: build.cmake  main.c
src/input/wasapi/: build.cmake  main.cpp
src/output/default/: build.cmake  main.c
src/output/graphical_sdl2/: build.cmake  main.c
src/output/graphical_wayland/: build.cmake  cairo.c  cairo.h  egl.c  main.c  main.h  registry.c  registry.h  shm.c  wl_output.c  wl_output.h  xdg.c  xdg.h  zwlr.c  zwlr.h
src/output/graphical_win/: build.cmake  main.c
src/output/graphical_x11/: build.cmake  main.c
src/output/shared/: graphical.c  graphical.h
src/output/shared/cairo/: main.c  main.h
src/output/shared/cairo/modules/bars/: build.cmake  main.c
src/output/shared/cairo/modules/kinetic/: build.cmake  main.c
src/output/shared/cairo/modules/media_info/: build.cmake  main.c
src/output/shared/cairo/modules/oscilloscope/: build.cmake  main.c
src/output/shared/cairo/util/: feature_compat.c  feature_compat.h  module.c  module.h  region.c  region.h
src/output/shared/gl/: egl.c  egl.h  glew.c  glew.h  main.c  main.h  post.c  post.h
src/output/shared/gl/util/: misc.c  misc.h  shader.c  shader.h
src/output/shared/util/media/: artwork.c  artwork.h  artwork_taglib.cpp  media_data.c  media_data.h
src/output/unsupported/terminal_ncurses/: build.cmake  main.c
src/shared/: build.cmake  ionotify.c  ionotify.h  log.c  log.h
src/shared/config/: config.c  config.h
src/shared/io/: io.c  io.h
src/shared/module/: abstractions.c  internal.h  module.h  unix.c  windows.c
src/shared/util/: types.h  version.c  version.h
(+13 files in other folders)
